theme boostrap sass qui fonctionne.

--- a/web/themes/custom/theme_books/scss/variables.scss
+++ b/web/themes/custom/theme_books/scss/variables.scss
@@ -10,7 +10,7 @@ $accent-dark: darken($accent-shade, 12%);
 // Reassign color vars to semantic color scheme
 $red: #dc3545;
 $yellow: #ffc107;
-$green: #28a745;
+$green: #cde6d3;
 $cyan: #17a2b8;
 $white: #fff;
 $gray-100: #f8f9fa;
