--- a/web/themes/custom/theme_books/scss/variables.scss
+++ b/web/themes/custom/theme_books/scss/variables.scss
@@ -14,6 +14,7 @@ $green: #cde6d3;
 $cyan: #17a2b8;
 $white: #fff;
 $gray-100: #f8f9fa;
+$gray-300: #c8d6e4;
 $gray-800: #343a40;
 $theme-colors: ( primary: $accent-shade, secondary: $primary-shade, success: $green, info: $cyan, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
 $brand-primary: $accent-shade;
